# PhotoDisarm

./: .gitignore  MIGRATION_GUIDE.md  README.md  blurry.py  build.py  dub.py  launcher.py  launcher.spec  pyproject.toml  requirements.txt  run_photodisarm.bat
.github/workflows/: build-release.yml  lint.yml  run-tests.yml
photodisarm/: __main__.py  blurry.py  canvas.py  dub.py  util.py
src/: blurry.py  dub.py  init.py  launcher.py  main.py  util.py
src/photodisarm/: __init__.py  __main__.py
src/photodisarm/core/: __init__.py  image_viewer.py  viewer.py
src/photodisarm/i18n/: __init__.py  localization.py
src/photodisarm/processing/: __init__.py  background.py  background_processor.py  corrupt.py  duplicates.py  image.py  image_processor.py
src/photodisarm/ui/: __init__.py  app.py
src/photodisarm/utils/: __init__.py  drawing.py  file_utils.py  util.py
src/tests/: __init__.py  conftest.py  test_image_navigation.py  test_image_processing.py  test_utils.py
