[tool.poetry]
name = "photodisarm"
version = "0.1.0"
description = ""
authors = ["johannes67890 <johannes@orager.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
rawpy = "^0.23.2"
numpy = "^2.1.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
